# ai-hedge-fund

./: .env.example  README.md  pyproject.toml
docs/: README_ID.md
src/: main.py
src/llm/: models.py
src/tools/: api.py  openrouter_config.py
